Bug 436845 - History Scrolled tty couldnt set its begining position while selecting texts
Summary: History Scrolled tty couldnt set its begining position while selecting texts
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-10 03:27 UTC by Ömer Fadıl USTA
Modified: 2021-05-23 22:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ömer Fadıl USTA 2021-05-10 03:27:06 UTC
STEPS TO REPRODUCE
1- Open Konsole / Yakuake

2-Run this one or do something with more than 2 scroll page

for i in {0..50}; do ls; done

3- wait until it fills screen and scroll up

4- try to copy any text in output within upper part of scroll

5- paste the copied text in somewhere else

OBSERVED RESULT
Selected/copied part should be same with pasted text

EXPECTED RESULT
It start to select beginning of the text and copy wrong part
so the pasted text became wrong



This is the screenrecord of bug : 
https://streamable.com/92nb45

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: All KDE part is compiled with kdesrc-build
KDE Plasma Version: 5.21.80
KDE Frameworks Version: 5.83
Qt Version: 5.15.2 ( with KDE's qt patches )
Comment 1 Bug Janitor Service 2021-05-23 15:08:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/395
Comment 2 Carlos Alves 2021-05-23 15:10:52 UTC
I've just committed the fix. Thanks
Comment 3 Carlos Alves 2021-05-23 22:10:19 UTC
Git commit 8a33aa6ccf8748d1c97da08d9b710d239b8b0895 by Carlos Alves.
Committed on 23/05/2021 at 15:08.
Pushed by usta into branch 'master'.

Fix correct beginning position while copying texts

Was missing the startColumn factor in the startCopy position.

M  +1    -1    src/history/compact/CompactHistoryScroll.cpp

https://invent.kde.org/utilities/konsole/commit/8a33aa6ccf8748d1c97da08d9b710d239b8b0895