Fix correct beginning position while copying texts

Was missing the startColumn factor in the startCopy position.

BUG: 436845